2017-08-28  Carlos Alberto Lopez Perez  <clopez@igalia.com>

        [GTK] [WPE] Rename EventHandlerGlib to EventHandlerGLib
        https://bugs.webkit.org/show_bug.cgi?id=175864

        Unreviewed cosmetic follow-up patch after r221075.

        No new tests. No change in behavior.

        * PlatformGTK.cmake:
        * PlatformWPE.cmake:
        * platform/glib/EventHandlerGLib.cpp: Renamed from Source/WebCore/platform/glib/EventHandlerGlib.cpp.
        (WebCore::EventHandler::tabsToAllFormControls const):
        (WebCore::EventHandler::focusDocumentView):
        (WebCore::EventHandler::passWidgetMouseDownEventToWidget):
        (WebCore::EventHandler::passMouseDownEventToWidget):
        (WebCore::EventHandler::eventActivatedView const):
        (WebCore::EventHandler::widgetDidHandleWheelEvent):
        (WebCore::EventHandler::createDraggingDataTransfer const):
        (WebCore::EventHandler::passMousePressEventToSubframe):
        (WebCore::EventHandler::passMouseMoveEventToSubframe):
        (WebCore::EventHandler::passMouseReleaseEventToSubframe):
        (WebCore::EventHandler::accessKeyModifiers):
        (WebCore::EventHandler::shouldTurnVerticalTicksIntoHorizontal const):

2017-08-23  Carlos Alberto Lopez Perez  <clopez@igalia.com>

        [WPE] Some event handlers not working.
        https://bugs.webkit.org/show_bug.cgi?id=175864

        Reviewed by Michael Catanzaro.

        Share the EventHandler implementation with the GTK port and add ifdefs where needed.

        Covered by existing tests.

        * PlatformGTK.cmake:
        * PlatformWPE.cmake:
        * page/wpe/EventHandlerWPE.cpp: Removed.
        * platform/glib/EventHandlerGlib.cpp: Renamed from Source/WebCore/page/gtk/EventHandlerGtk.cpp.
        (WebCore::EventHandler::shouldTurnVerticalTicksIntoHorizontal const):

2017-10-16  Maureen Daum  <mdaum@apple.com>
