@@ -1,3 +1,15 @@
+2017-08-17  Zan Dobersek  <zdobersek@igalia.com>
+
+        [GStreamer] GstStructure shouldn't be handled through GRefPtr
+        https://bugs.webkit.org/show_bug.cgi?id=175673
+
+        Reviewed by Xabier Rodriguez-Calvar.
+
+        * platform/graphics/gstreamer/eme/WebKitCommonEncryptionDecryptorGStreamer.cpp:
+        (webkitMediaCommonEncryptionDecryptTransformCaps): GstStructure isn't
+        ref-counted, so it should be handled through the GUniquePtr<GstStructure>
+        smart pointer.
+
 2017-08-28  Carlos Alberto Lopez Perez  <clopez@igalia.com>
 
         [GTK] [WPE] Rename EventHandlerGlib to EventHandlerGLib
